--- a/index.html
+++ b/index.html
@@ -1,6 +1,23 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <!-- Social Media Preview Tags -->
+    <title>Yash Rupani | Data Engineer Portfolio</title>
+    <meta name="description" content="Portfolio of Yash Rupani - Software & Data Engineer specializing in AWS, ETL pipelines, and Python." />
+
+    <!-- LinkedIn / Facebook / Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://rupaniyash.github.io/portfolio/" />
+    <meta property="og:title" content="Yash Rupani | Data Engineer Portfolio" />
+    <meta property="og:description" content="Showcase of my ETL pipelines, Big Data projects, and cloud architecture work." />
+    <meta property="og:image" content="https://rupaniyash.github.io/portfolio/preview.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://rupaniyash.github.io/portfolio/" />
+    <meta property="twitter:title" content="Yash Rupani | Data Engineer Portfolio" />
+    <meta property="twitter:description" content="Showcase of my ETL pipelines, Big Data projects, and cloud architecture work." />
+    <meta property="twitter:image" content="https://rupaniyash.github.io/portfolio/preview.png" />
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
